[gd_scene load_steps=5 format=3 uid="uid://b4eskf8f1gd2r"]

[ext_resource type="Script" uid="uid://cw0rkm77udcyx" path="res://Scripts/Menus/graficos.gd" id="1_qrw10"]
[ext_resource type="PackedScene" uid="uid://bc0pvylyphul1" path="res://Scenes/Menus/boton_modo_ventana.tscn" id="1_vb2iw"]
[ext_resource type="PackedScene" uid="uid://b16ie1d2dkvrs" path="res://Scenes/Menus/boton_resolucion.tscn" id="2_qrw10"]
[ext_resource type="Theme" uid="uid://d28wke34y3qap" path="res://Themes/tema_general.tres" id="4_exjkw"]

[node name="Graficos" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qrw10")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
theme_override_constants/separation = 128

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 128

[node name="boton_modo_ventana" parent="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("1_vb2iw")]
layout_mode = 2
focus_neighbor_top = NodePath("../Volver al menu")
focus_neighbor_bottom = NodePath("../boton_resolucion")
focus_mode = 2

[node name="boton_resolucion" parent="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("2_qrw10")]
layout_mode = 2
focus_neighbor_top = NodePath("../boton_modo_ventana")
focus_neighbor_bottom = NodePath("../Volver al menu")
focus_mode = 2

[node name="Volver al menu" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../boton_resolucion")
focus_neighbor_bottom = NodePath("../boton_modo_ventana")
theme = ExtResource("4_exjkw")
text = "Atr√°s"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/Volver al menu" to="." method="_on_volver_al_menu_pressed"]
